re PR middle-end/19775 (sqrt(pow(x,y)) != pow(x,y*0.5) (with -ffast-math))

PR middle-end/19775

	* builtins.c (fold_builtin_sqrt): Transform sqrt(pow(x,y))
	to pow(fabs(x),y*0.5), not pow(x,y*0.5).

	* gcc.dg/builtins-10.c: Disable test for invalid transformation
	and one test we no longer optimize.
	* gcc.dg/builtins-47.c: New testcase.

From-SVN: r94665